window: use normal keyboard modifiers for triggering custom tiling

Modifiers for global shortcuts are handled differently from normal shortcuts,
because they need to consider modifiers that are consumed by xkb for keyboard
layout transitions and similar. This restriction is not relevant for custom
tiling.

BUG: 465858
(cherry picked from commit 1f1c54ca6cea498fda8c6d14612a4bfd36402c86)